<resources>
    <string name="app_name">Vybe</string>
    <string name="vybe">Vybe</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="empty_message">You can\'t send an empty message!</string>
    <string name="error">THERE IS AN ERROR!</string>
    <string name="successfully_deleted">Successfully deleted!</string>
    <string name="failed_to_delete">Failed to delete!</string>
    <string name="no_valid_location">You do not have a Valid Location!</string>
    <string name="no_spotify">No Spotify App Installed.</string>
    <string name="maximum_radius">Maximum Radius!</string>
    <string name="minimum_radius">Minimum Radius!</string>
    <string name="failed">Failed!</string>
    <string name="invalid_sentence">INVALID SENTENCE!</string>
    <string name="no_preview">UH OH! PREVIEW NOT AVAILABLE!</string>
    <string name="authenticate">AUTHENTICATE</string>
    <string name="uh_oh_an_error_occurred_try_restarting">Uh oh! An error occurred! Try restarting.</string>
    <string name="check_your_internet_connection">Check your internet connection...</string>
    <string name="good_day">Good day,</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="type_a_message">Type a message...</string>
    <string name="song_name">Song name</string>
    <string name="song_artist">Song Artist</string>
    <string name="hello">hello</string>
    <string name="profile">Profile</string>
    <string name="location">Location...</string>
    <string name="save">SAVE</string>
    <string name="logout">LOGOUT</string>
    <string name="go">GO</string>
    <string name="reload">Reload</string>
    <string name="search">Search...</string>
    <string name="cancel">CANCEL</string>
    <string name="you_will_be_redirected_to_spotify">You will be redirected to Spotify.</string>
    <string name="kindly_restart_this_app_after_logging_out">Kindly restart this app after logging out.</string>
    <string name="you_will_be_redirected_to_spotify_authentication">You will be redirected to Spotify Authentication.</string>
    <string name="kindly_make_changes">Kindly make changes.</string>
    <string name="create">Create</string>
    <string name="playlist_name">Add a playlist name...</string>
    <string name="create_playlist">CREATE PLAYLIST</string>
    <string name="copy">COPY</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="this_is_last_message">This is last message</string>
    <string name="_1">1</string>
    <string name="song_size">Song Size</string>
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="no_message">No Message</string>
    <string name="empty" />
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="share">Share</string>
    <string name="playlist_link">Playlist Link</string>
    <string name="check_out_playlist">Check out this playlist</string>
    <string name="share_using_vybe">Share using Vybe</string>

</resources>
