<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    tools:context=".Fragments.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#5F6061">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/man" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:id="@+id/username"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/etLocation"
        android:background="@drawable/text_input"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileCard"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/location"
        android:textColorHint="#8E8C8C"/>

    <TextView
        android:id="@+id/tvSaveLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLocation"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_background"
        android:padding="15dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textColorHint="#8E8C8C"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/button_background"
        android:padding="15dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textColorHint="#8E8C8C"
        android:textStyle="bold" />


</RelativeLayout>